# duck-dbt-showcase

./: main.py  pyproject.toml
dbtlearn/: dbt_project.yml
dbtlearn/models/: schema.yml  sources.yml
dbtlearn/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql
dbtlearn/models/fct/: fct_reviews.sql
dbtlearn/models/mart/: mart_full_moon_reviews.sql
dbtlearn/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbtlearn/snapshots/: scd_raw_listings.sql
script/: 010-snowflake-setup.md  create_raw_hosts.sql  create_raw_listings.sql  create_raw_reviews.sql  insert_reviews.sql
